# ThirdYearProjectSolution

./: .gitignore  CMakeLists.txt  README.md  map.avi  package.xml  rebuildSolution.sh  runRobot.sh  startRobot.sh  view.avi
LibProject/inc/: Camera.h  Graph.h  Map.h  ObjectDetection.h  Statistics.h  imgProcessing.h  possibleObject.h
LibProject/src/: CMakeLists.txt  Camera.cpp  Graph.cpp  Map.cpp  Objectdetection.cpp  Statistics.cpp  imgProcessing.cpp  possibleObject.cpp
MainProject/inc/: Navigator.hpp
MainProject/src/: CMakeLists.txt  Navigator.cpp  main.cpp
