find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( ${ObjectTracking_SOURCE_DIR}/MainProject/inc )
include_directories( ${ObjectTracking_SOURCE_DIR}/LibProject/inc )
link_directories( ${ObjectTracking_SOURCE_DIR}/LibProject/src )
add_executable( MainProject main.cpp )
target_link_libraries ( MainProject LibProject )
target_link_libraries( MainProject ${OpenCV_LIBS} )